feat: started on header and initiated css

--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
   </head>
 
   <body>
-    <main></main>
+    <main>
+      <header class="primary-header"></header>
+    </main>
   </body>
 </html>
