wip: template attempt, snakey

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     />
-    <title>Document</title>
+    <title>Wes Keiser</title>
     <link
       rel="stylesheet"
-      href="./index.css"
+      href="./css/index.css"
     />
   </head>
 
@@ -45,32 +45,47 @@
       <fieldset class="cv">
         <legend>Title</legend>
 
-        <div>
-          <div class="cv_item_toggle">
-            <input
-              id="cv_education"
-              type="radio"
-            />
-            <label
-              for="cv_education"
-              id="test1"
-            >
-              Education</label
-            >
-          </div>
-
-          <p>eduaction</p>
+        <div class="cv_elements">
+          <input
+            id="cv_education"
+            type="radio"
+            name="cv_radio"
+          />
+          <label
+            for="cv_education"
+            id="test1"
+          >
+            Education</label
+          >
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat
+            vero, quisquam culpa mollitia sequi quasi eveniet maxime? Rem,
+            reiciendis mollitia alias, optio at deserunt similique
+            exercitationem porro nesciunt, cum quas ratione? Quisquam earum
+            ipsam veritatis, assumenda quas maiores praesentium adipisci
+            blanditiis voluptates iusto reprehenderit soluta harum vitae iure
+            deleniti quod.
+          </p>
         </div>
 
-        <div>
-          <div class="cv_item_toggle">
-            <input
-              id="cv_experience"
-              type="radio"
-            />
-            <label for="cv_experience">Experience</label>
-          </div>
+        <div class="cv_elements">
+          <input
+            id="cv_experience"
+            type="radio"
+            name="cv_radio"
+          />
+          <label for="cv_experience">Experience</label>
           <p>experience</p>
+        </div>
+
+        <div class="cv_elements">
+          <input
+            id="cv_temp101010"
+            type="radio"
+            name="cv_radio"
+          />
+          <label for="cv_temp101010">Temp</label>
+          <p>temptemptemp</p>
         </div>
       </fieldset>
     </main>
