--- a/index.html
+++ b/index.html
@@ -18,29 +18,122 @@
   </head>
 
   <body>
-    <header class="primary-header"></header>
+    <header class="primary-header">
+      <h1>Wes Keiser</h1>
+    </header>
 
     <main>
-      <nav class="primary-nav">
-        <ol>
-          <li><a href="">Intro</a></li>
-          <li><a href="">Skills</a></li>
-          <li><a href="">CV</a></li>
-          <li><a href="">Contact</a></li>
-        </ol>
-      </nav>
+      <div class="style-wrapper_intro">
+        <div class="intro_pipe">
+          <div class="intro_pipe_body"></div>
+        </div>
 
-      <section class="intro">
-        <h1>Wes Keiser</h1>
-        <p>
-          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Perspiciatis
-          vitae facere obcaecati temporibus, in beatae tempore cumque dolore
-          molestias numquam aspernatur explicabo reprehenderit at quaerat
-          facilis fuga voluptates itaque pariatur quod. Aperiam expedita non
-          consequatur, sequi dolor explicabo optio, ullam modi ipsam quisquam
-          eveniet voluptate. Magni in atque dicta. Tempora!
-        </p>
-      </section>
+        <nav class="primary-nav">
+          <ol>
+            <li><a href="">Intro</a></li>
+            <li><a href="">Skills</a></li>
+            <li><a href="">CV</a></li>
+            <li><a href="">Contact</a></li>
+          </ol>
+        </nav>
+
+        <section class="intro">
+          <p>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+            Perspiciatis vitae facere obcaecati temporibus, in beatae tempore
+            cumque dolore molestias numquam aspernatur explicabo reprehenderit
+            at quaerat facilis fuga voluptates itaque pariatur quod. Aperiam
+            expedita non consequatur, sequi dolor explicabo optio, ullam modi
+            ipsam quisquam eveniet voluptate. Magni in atque dicta. Tempora!
+          </p>
+        </section>
+      </div>
+
+      <style>
+        .pipe-neck {
+          width: 10em;
+          height: 50em;
+
+          background:
+        /* radial-gradient(
+            circle at center top,
+            rgb(0, 29, 0) -20%,
+            transparent 100px
+          ), */
+          /* radial-gradient(
+            circle at center top,
+            rgb(0, 29, 0) -20%,
+            transparent 100px
+          ), */ radial-gradient(
+              circle at center top,
+              transparent -25%,
+              rgba(0, 65, 3, 0.752) -5%,
+              transparent 25% 80px
+            ),
+            linear-gradient(
+              to right,
+              rgb(54, 109, 49),
+              rgb(140, 213, 130) 25% 40%,
+              rgb(9, 50, 5)
+            );
+
+          box-shadow: 0em 2em 2em -1em rgb(3, 52, 10) inset;
+        }
+
+        .pipe-hat {
+          width: 12.5em;
+          /* border: 1px solid red; */
+          height: 2.5em;
+
+          background: linear-gradient(
+            to right,
+            rgb(54, 109, 49),
+            rgb(140, 213, 130) 25% 35%,
+            rgb(9, 50, 5)
+          );
+          border-radius: 0.2em;
+          /* box-shadow: 1em 1em 3em #000;
+        z-index: 1; */
+
+          position: relative;
+        }
+
+        .pipe-hat > div {
+          /* border: 1px solid red; */
+          height: 0.2em;
+          position: absolute;
+          top: 5%;
+          width: 100%;
+          background: linear-gradient(
+            90deg,
+            transparent 5%,
+            rgba(255, 255, 255, 0.563) 20% 22%,
+            transparent 50%
+          );
+        }
+
+        .pipe-wrapper {
+          display: flex;
+          flex-flow: column wrap;
+          align-items: center;
+        }
+
+        /* Lek */
+        .thisElement {
+          opacity: 1;
+          animation-name: myanimation;
+          animation-duration: 1s;
+          animation-iteration-count: infinite;
+          animation-direction: alternate;
+          /* Kan også skrive det i en prop: "animation", f.eks. slik: */
+          /* animation: myanimation 1s forwards; */
+        }
+        @keyframes myanimation {
+          from {
+            opacity: 0;
+          }
+        }
+      </style>
 
       <fieldset class="cv">
         <legend>Title</legend>
@@ -50,13 +143,17 @@
             id="cv_education"
             type="radio"
             name="cv_radio"
+            checked="true"
           />
-          <label
-            for="cv_education"
-            id="test1"
-          >
-            Education</label
-          >
+          <label for="cv_education">
+            <span class="scr-only">Education</span>
+
+            <img
+              alt="todo"
+              src="./images/graduation-hat-svgrepo-com.svg"
+              aria-disabled="true"
+            />
+          </label>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat
             vero, quisquam culpa mollitia sequi quasi eveniet maxime? Rem,
@@ -74,7 +171,14 @@
             type="radio"
             name="cv_radio"
           />
-          <label for="cv_experience">Experience</label>
+          <label for="cv_experience"
+            ><span class="scr-only">Experience</span>
+            <img
+              src="./images/briefcase-svgrepo-com.svg"
+              alt=""
+              aria-disabled="true"
+            />
+          </label>
           <p>experience</p>
         </div>
 
@@ -84,7 +188,11 @@
             type="radio"
             name="cv_radio"
           />
-          <label for="cv_temp101010">Temp</label>
+          <label for="cv_temp101010"
+            ><img
+              src="./images/warp-pipe.svg"
+              alt=""
+          /></label>
           <p>temptemptemp</p>
         </div>
       </fieldset>
